test/testdata/syntax_error/illegal_char.lox
print 1 $ 2; // syntax error: illegal character U+0024 '$'
